# acc

./: .containerignore  .env.example  .gitignore  CHANGELOG.md  README.md  acc-cli.sh  acc-config.yaml  acc-deploy.sh  acc-pkg  acc-webgui.htpasswd.example  cap_v2.jsonl  collective.assistant.yaml  collective.autoresearcher.yaml  collective.coding-split.yaml  collective.orchestrator.yaml  collective.reviewer.yaml  collective.worker-pool.yaml  collective.yaml  diag.txt  diagnose-tui.sh  models.yaml  pyproject.toml  redeploy.sh  tui-rebuild.sh
.acc-apply/: .gitkeep
.acc-localcat/: .gitkeep
acc/: __init__.py  _atomic_write.py  agent.py  assistant_proposal.py  audit.py  capability_dispatch.py  capability_index.py  capability_validator.py  catalog_admin.py  cluster.py  cognitive_core.py  collective.py  comms_provisioning.py  compliance_scan.py  config.py  docstore.py  domain.py  estimator.py  features.py  frameworks.py  gap_analysis.py  golden_prompts.py  governance.py  governance_capabilities.py  governance_inventory.py  marketplace.py  memory_reflection.py  models.py  nats_permissions.py  nkeys.py  operating_modes.py  operator_identity.py  overlay.py  oversight.py  perception.py  plan.py  policy_layer.py  progress.py  redis_compat.py  role_assign.py  (+20 more)
acc/a2a/: __init__.py  card.py  client.py  federation.py  jsonrpc.py  server.py  signing.py
acc/assistant/: __init__.py  catalog_view.py  gap_analysis.py
acc/backends/: __init__.py  genai_semconv.py  llm_anthropic.py  llm_llama_stack.py  llm_ollama.py  llm_openai_compat.py  llm_vllm.py  metrics_log.py  metrics_otel.py  mlflow_runs.py  pipeline_tracing.py  signaling_nats.py  vector_lancedb.py  vector_milvus.py  vector_turbovec.py
acc/catalog/: __init__.py  server.py  store.py
acc/channels/: __init__.py  base.py  slack.py  tui.py  voice_daemon.py  webgui.py
acc/cli/: __init__.py  __main__.py  _common.py  collective_cmd.py  e2e_cmd.py  llm_cmd.py  nats_cmd.py  overlay_cmd.py  oversight_cmd.py  plan_cmd.py  role_cmd.py  schedule_cmd.py  trace_cmd.py
acc/compliance/: __init__.py  eu_ai_act.py  evidence.py  hipaa.py  (+2 more)
collectives/: README.md  collective.assistant.yaml  collective.autoresearcher.yaml  collective.capital-markets.yaml  collective.coding-split.yaml  collective.e2e-demo.yaml  collective.orchestrator.yaml  collective.reviewer.yaml  collective.worker-pool.yaml  demo-coding.yaml  demo-financial.yaml  demo-multi.yaml  packs.yaml
console-plugin/: .eslintrc.json  .gitignore  Containerfile  README.md  console-extensions.json  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
container/: Containerfile.flavour
deploy/: .env.example  Containerfile.agent-core  Containerfile.redis  Containerfile.tui  entrypoint-agent.sh  podman-compose.yml
docs/: ACCv3.md  AUTORESEARCHER_implementation.md  AUTORESEARCHER_index.md  CHANGELOG.md  CODING_AGENT_SUBROLES.md  CONTRIBUTING-ROLE.md  DECISIONS.md  DEMOS.md  DEMO_TUI_autoresearcher.md  DEMO_TUI_subagent_clustering.md  IMPLEMENTATION_SPEC_v0.1.0.md  IMPLEMENTATION_SPEC_v0.2.0.md  IMPLEMENTATION_subagent_clustering.md  INDEX_subagent_clustering.md  MIGRATING-FROM-INTREE.md  PUBLISHING-FAMILY-PACKS.md  ROADMAP_subagent_clustering.md  SUBAGENT_COMMUNICATION.md  TESTING-INFUSION-E2E.md  TESTING.md  WORKFLOW_infusion_to_prompt.md  a2a-interop.md  acc-cli.md  acc-pkg.md  acc-rhoai-integration-report.md  acc-tui-usability-report.md  agent-bom-and-new-agent.md  agent-personalization-overlay-DRAFT.md  compliance_governance.md  gen_pdf.py  gen_pdf_accv3.py  golden_prompts_scheduling.md  howto-agentsets.md  howto-build-deploy-infuse.md  howto-coding-split-demo.md  howto-demo-coding-finance-e2e.md  howto-deploy.md  howto-edge.md  howto-mcp-sources.md  howto-mcp.md  (+41 more)
env/: .env.anthropic  .env.example  .env.granite4-1b-speech  .env.llama-3.2-1B-Instruct-FP8  .env.llama-3.2-3B-Instruct-FP8  .env.qwen3-1.7B  .env.qwen3-tts-1.7-custom  README.md  use.sh
examples/: catalogs.dev.yaml  catalogs.yaml
features/: google_workspace.yaml  messengers.yaml  sandbox.yaml  signal.yaml  speech.yaml
gitops/: README.md
openspec/: RENAMES.md  config.yaml
operator/: Containerfile  Makefile  PROJECT  bundle.Dockerfile  go.mod  go.sum
packaging/: control-roles.yaml
policy/: enterprise-contract.yaml
profiles/: comms.yaml  edge.yaml  fulltest.yaml  nano.yaml  office.yaml  standard.yaml  voice.yaml
schedules/: _example.yaml
scripts/: acc-apply-watcher.sh  acc-lifecycle-watcher.sh  acc-nkeys  gen_os_basic_skills.py  gen_xplatform_skills.py  grant_os_basics_to_roles.py  sync-host-config.sh  verify-apply-tui.sh  vllmpunch-status.py
tests/: conftest.py  test_a2a_card.py  test_a2a_client.py  test_a2a_federation.py  test_a2a_server.py  test_a2a_signing.py  test_agent.py  test_agent_bom.py  test_agent_config_reload.py  test_agent_receptor.py  test_agent_target_agent_id.py  test_agentset_model_dropdown.py  test_aoa_p3b_host_integration.py  test_aoa_p4_agent_card.py  test_aoa_p5_operator_identity.py  test_aoa_p6_role_policy_wiring.py  test_apply_watcher_signature.py  test_apply_workspace_base_glob.py  test_arbiter_cluster_dispatch.py  test_assistant_control_signals.py  test_assistant_infusion_authz.py  test_assistant_proposal.py  test_assistant_proposal_marker_forms.py  test_assistant_proposal_phase2b.py  test_assistant_role.py  test_audit.py  test_authoring_skills.py  test_backend_cache_hint.py  test_backends_llm.py  test_backends_metrics.py  test_backends_signaling.py  test_backends_vector.py  test_build_backends.py  test_builtin_catalog.py  test_cache_metrics.py  test_capability_dispatch_friendly_errors.py  test_capability_dispatch_oversight.py  test_capability_index.py  test_capability_index_intersection.py  test_capability_semantic_routing.py  (+186 more)
tools/: SMOKE.md  bootstrap-podman-desktop.sh  build_family_pkg.py  build_pilot_pkg.py  check_collectives.py  classify_skills_mcps.py  cosign-pilot-keygen.sh  gen_builtin_catalog.py  skill_mcp_tiers.yaml  smoke-acc1-hub.sh
webgui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
workspaces/: .gitkeep
(+936 files in other folders)
