[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-cell-corpus"
version = "0.1.0"
description = "Biologically-inspired distributed AI agent governance framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael", email = "microcosm@solarsys.local" },
]
keywords = ["agents", "governance", "bioelectric", "levin", "nats", "opa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Signaling
    "nats-py>=2.7,<3.0",
    # Vector DB
    "lancedb>=0.10,<1.0",
    "pymilvus>=2.4,<3.0",
    # LLM clients
    "anthropic>=0.40,<1.0",
    "httpx>=0.27,<1.0",
    # Embeddings (local fallback)
    "sentence-transformers>=3.2,<4.0",
    # Observability
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25,<2.0",
    # Config
    "pydantic>=2.8,<3.0",
    "pyyaml>=6.0,<7.0",
    # Cryptography (Ed25519 arbiter signature verification — Phase 0a)
    "cryptography>=42,<45",
    # Working memory (Redis — Phase 0b)
    "redis>=5.0,<6.0",
    # Wire serialization
    "msgpack>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
]
tui = [
    "textual>=0.80,<1.0",
    "rich>=13,<15",
]

[project.scripts]
acc-agent = "acc.agent:main"
acc-tui = "acc.tui.app:main"
acc-cli = "acc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acc*"]

[tool.setuptools.package-data]
# Include Textual stylesheet so it is present in the installed package.
# Without this entry, pip install only copies .py files; CSS_PATH lookup
# in acc/tui/app.py would point to site-packages where app.tcss is absent,
# causing a silent FileNotFoundError exit (code 1) inside the alternate-
# screen buffer — invisible to podman logs.
"acc.tui" = ["*.tcss"]
# Per-screen help markdown loaded via importlib.resources by HelpScreen
# (acc/tui/screens/help.py).  Bundled into the installed package so the
# ? key works after `pip install --no-deps .` in the production image.
"acc.tui.help" = ["*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=acc --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["acc"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
