[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-cell-corpus"
version = "0.3.13"
description = "Biologically-inspired distributed AI agent governance framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael", email = "microcosm@solarsys.local" },
]
keywords = ["agents", "governance", "bioelectric", "levin", "nats", "opa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Signaling
    "nats-py>=2.7,<3.0",
    # Vector DB
    "lancedb>=0.10,<1.0",
    "pymilvus>=2.4,<3.0",
    # LLM clients
    "anthropic>=0.40,<1.0",
    "httpx>=0.27,<1.0",
    # Embeddings (local fallback).  sentence-transformers pulls
    # transformers transitively.  Dependabot alert #8 flags the
    # `transformers.Trainer` class — we never use Trainer (only the
    # SentenceTransformer encode() API for embeddings), so the
    # vulnerable code is not in the execution path.  The patched
    # transformers line is 5.x and no sentence-transformers release
    # yet supports it, so the alert is dismissed with "vulnerable
    # code not in execution path" until ST 4.x → ST 5.x makes the
    # bump available.
    "sentence-transformers>=3.2,<5.0",
    # Observability
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25,<2.0",
    # Config
    "pydantic>=2.8,<3.0",
    "pyyaml>=6.0,<7.0",
    # Cryptography (Ed25519 arbiter signature verification — Phase 0a)
    "cryptography>=46.0.7,<47",
    # JWT-SVID verification for signing_mode=spiffe (proposal 011 PR-4).
    # Small pure-Python lib; reuses the cryptography dep above.
    "pyjwt>=2.8,<3.0",
    # Working memory (Redis — Phase 0b)
    "redis>=5.0,<6.0",
    # Wire serialization
    "msgpack>=1.1,<2.0",
    # Skill manifest input/output schema validation (Phase 4)
    "jsonschema>=4.19,<5.0",
]

[project.optional-dependencies]
dev = [
    # pytest 8.x has a tmpdir-handling CVE (GHSA dependabot #9); the
    # patched release line is pytest 9.x.  Bump pytest-asyncio with it
    # — pytest-asyncio<1.0 caps pytest at <9.
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-cov>=5.0,<8.0",
]
tui = [
    "textual>=0.80,<1.0",
    "rich>=13,<15",
]
slack = [
    # Slack Bolt async — Socket Mode handler so the daemon works behind
    # firewalls without exposing a public webhook.  aiohttp is pulled
    # transitively but listing it here documents the runtime requirement.
    "slack_bolt>=1.20,<2.0",
    "aiohttp>=3.9,<4.0",
]
a2a = [
    # acc/a2a — A2A (Agent-to-Agent protocol) interop for ACC.  Phases 1b/2
    # add an opt-in HTTP / JSON-RPC server alongside the agent's NATS
    # subscriber; Phase 3 adds an outbound A2A client.  All gated by
    # ACC_A2A_PORT — default off → no aiohttp import at runtime.
    "aiohttp>=3.9,<4.0",
]
webgui = [
    # acc-webgui — the optional FastAPI + React web frontend.  The
    # React build is a separate Node toolchain (webgui/ tree); only
    # these Python deps ship in the runtime image.  authlib backs the
    # OIDC + htpasswd-session-JWT auth tiers; bcrypt verifies the
    # htpasswd file (proposal acc-webgui PR-5 + the htpasswd/mtls
    # auth-mode amendment).
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "authlib>=1.3,<2.0",
    "bcrypt>=4.1,<5.0",
]

[project.scripts]
acc-agent = "acc.agent:main"
acc-tui = "acc.tui.app:main"
acc-cli = "acc.cli:main"
acc-webgui = "acc.webgui.app:main"
# Slack channel daemon — operator runs `pip install 'acc[slack]'` first
# so slack_bolt is on the PYTHONPATH before this entry point is invoked.
acc-channel-slack = "acc.channels.slack:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acc*"]

[tool.setuptools.package-data]
# Include Textual stylesheet so it is present in the installed package.
# Without this entry, pip install only copies .py files; CSS_PATH lookup
# in acc/tui/app.py would point to site-packages where app.tcss is absent,
# causing a silent FileNotFoundError exit (code 1) inside the alternate-
# screen buffer — invisible to podman logs.
"acc.tui" = ["*.tcss"]
# Per-screen help markdown loaded via importlib.resources by HelpScreen
# (acc/tui/screens/help.py).  Bundled into the installed package so the
# ? key works after `pip install --no-deps .` in the production image.
"acc.tui.help" = ["*.md"]
# Compiled React SPA (Vite `dist/`).  Containerfile.webgui copies the
# build output into acc/webgui/static BEFORE `pip install --no-deps .`;
# without this entry pip copies only .py files, so the installed package
# has no static/ dir — app.py then skips the SPA mount and every non-API
# path returns FastAPI's {"detail":"Not Found"}.  The glob is empty (and
# harmless) in a dev checkout where static/ does not exist.
"acc.webgui" = ["static/*", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=acc --cov-report=term-missing --cov-fail-under=80"
markers = [
    "e2e: end-to-end tests that require a live ACC stack (NATS + agents). Opt-in: run with `pytest -m e2e` after `./acc-deploy.sh up`. See docs/TESTING.md.",
]

[tool.coverage.run]
source = ["acc"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
